shape text font size increase

--- a/style/style.css
+++ b/style/style.css
@@ -103,6 +103,8 @@ header {
 }
 
 .banner__text--container #shape {
+  font-size: 5rem;
+  font-weight: 500;
   font-family: "Dancing Script", cursive;
 }
 
