--- a/style/style.css
+++ b/style/style.css
@@ -857,6 +857,7 @@ th {
   width: 25%;
   margin-bottom: 20px;
   padding: 10px;
+  border-radius: 10px;
 }
 
 .crosscut__title {
@@ -999,7 +1000,6 @@ th {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.3px;
-  text-align: left;
 }
 
 /* footer end */
