--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  max-width: 1440px;
+  width: 100%;
   height: auto;
   margin: 0 auto;
   font-family: "Inter", sans-serif;
@@ -22,7 +22,7 @@ body {
 
 /* header */
 header {
-  max-width: 1440px;
+  width: 100%;
   height: auto;
   background-color: #232323;
   border: 1px solid transparent;
@@ -549,11 +549,13 @@ header {
 
 /* BMI__calculator--section start */
 .BMI__calculator--section {
-  max-width: 1440px;
+  /* max-width: 1440px; */
+  width: 100%;
   height: 487px;
   background: rgb(34, 34, 34);
   display: flex;
   justify-content: space-evenly;
+  margin: 0 auto;
 }
 
 .BMI__chart {
@@ -919,9 +921,10 @@ th {
 
 /* footer start*/
 .footer {
-  max-width: 1440px;
+  width: 100%;
   height: 489px;
   background-color: #1a1a1a;
+  margin: 0 auto;
   margin-top: 88px;
   border: 1px solid transparent;
 }
@@ -1001,5 +1004,4 @@ th {
   line-height: 24px;
   letter-spacing: 0.3px;
 }
-
 /* footer end */
