--- a/style/style.css
+++ b/style/style.css
@@ -799,7 +799,8 @@ th {
 
 /* passes section start */
 .passes-section {
-  width: 1060px;
+  /* width: 1060px; */
+  width: 90%;
   height: auto;
   border-radius: 18px;
   background: rgb(34, 34, 34);
@@ -860,6 +861,10 @@ th {
   margin-bottom: 20px;
   padding: 10px;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .crosscut__title {
@@ -892,7 +897,7 @@ th {
   line-height: 24px;
   letter-spacing: 0.3px;
   text-align: left;
-  margin-left: 30px;
+  /* margin-left: 30px; */
 }
 
 .purchase__btn {
@@ -908,7 +913,6 @@ th {
   text-align: center;
   cursor: pointer;
   margin-top: 24px;
-  margin-left: 50px;
   margin-bottom: 10px;
 }
 
