--- a/style/style.css
+++ b/style/style.css
@@ -713,14 +713,14 @@ th {
 
 /* team section start */
 .team-section {
-  max-width: 1060px;
+  width: 90%;
   height: 782px;
   margin: 0 auto;
   margin-top: 82px;
 }
 
 .team__contents {
-  max-width: 671px;
+  width: 90%;
   height: 120px;
   margin: 0 auto;
   margin-bottom: 48px;
@@ -736,7 +736,7 @@ th {
 }
 
 .team__contents__description {
-  width: 550px;
+  width: 90%;
   height: 44px;
   color: rgba(255, 255, 255, 0.5);
   font-size: 0.82rem;
@@ -748,10 +748,10 @@ th {
 }
 
 .team__images {
-  max-width: 1060px;
+  width: 100%;
   height: 604px;
   padding: 16px;
-  margin: 0px 20px;
+  margin: 0px auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 16px;
@@ -794,12 +794,10 @@ th {
   line-height: 24px;
   letter-spacing: 0.3px;
 }
-
 /* team section end */
 
 /* passes section start */
 .passes-section {
-  /* width: 1060px; */
   width: 90%;
   height: auto;
   border-radius: 18px;
