--- a/style/style.css
+++ b/style/style.css
@@ -717,14 +717,13 @@ th {
 /* team section start */
 .team-section {
   width: 90%;
-  height: 782px;
   margin: 0 auto;
   margin-top: 82px;
 }
 
 .team__contents {
   width: 90%;
-  height: 120px;
+  /* height: 120px; */
   margin: 0 auto;
   margin-bottom: 48px;
 }
@@ -752,7 +751,6 @@ th {
 
 .team__images {
   width: 100%;
-  height: 604px;
   padding: 16px;
   margin: 0px auto;
   display: grid;
@@ -763,8 +761,9 @@ th {
 }
 
 .team__image {
-  max-width: 326.67px;
+  width: 100%;
   height: 272px;
+  margin: 0 auto;
 }
 
 .team__image img {
@@ -772,7 +771,7 @@ th {
   height: 100%;
   border-radius: 18px;
   opacity: 85%;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .team__image__title,
@@ -791,7 +790,6 @@ th {
 
 .team__image__description {
   color: rgba(255, 255, 255, 0.5);
-  font-family: Inter;
   font-size: 0.87rem;
   font-weight: 400;
   line-height: 24px;
