--- a/style/tab.css
+++ b/style/tab.css
@@ -1,13 +1,12 @@
 /* @media screen and (min-width: 576px) and (max-width: 992px)  */
 
-/* header */
+/* header container starts here */
 header {
   width: 100%;
   height: auto;
-  /* overflow: hidden; */
 }
 
-/* nav */
+/* navbar start */
 .navbar {
   width: 100%;
   height: auto;
@@ -34,8 +33,9 @@ header {
   font-size: 1rem;
   line-height: 100%;
 }
+/* navbar end */
 
-/* banner */
+/* banner start */
 .banner {
   display: flex;
   flex-direction: column;
@@ -121,10 +121,6 @@ header {
 .div350 {
   max-width: 155.74px;
   height: 72.58px;
-  /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
   position: absolute;
   top: 45%;
   left: 0%;
@@ -149,10 +145,6 @@ header {
 .div500 {
   max-width: 145.91px;
   height: 74.09px;
-  /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; */
   position: absolute;
   top: 10%;
   left: 55%;
@@ -169,10 +161,11 @@ header {
   font-weight: 400;
   line-height: 18px;
 }
+/* banner end */
 
-/* main */
+/* main container starts here*/
 
-/* change__habit--section */
+/* change__habit--section start */
 .change__habit--section {
   width: 100%;
   height: auto;
@@ -236,8 +229,9 @@ header {
   letter-spacing: 0.3px;
   text-align: center;
 }
+/* change__habit--section end */
 
-/* extra mile section */
+/* extra mile section start */
 .extra__mile--section {
   width: 95%;
   height: auto;
@@ -297,6 +291,7 @@ header {
   height: 100%;
   border-radius: 18px;
 }
+/* extra mile section end */
 
 /* training section start */
 .training-section {
@@ -389,22 +384,19 @@ header {
 .training__card-4 p,
 .training__card-5 p,
 .training__card-6 p {
-  width: 144px;
-  height: 31px;
-  width: 80%;
+  width: 100%;
   height: auto;
   position: relative;
   top: 81%;
   left: 6%;
 }
-
 /* training section end */
 
 /* BMI Content start */
 .BMI__content {
-  width: 100%;
+  width: 90%;
   height: auto;
-  margin: 0;
+  margin: 0 auto;
   padding: 0 40px;
   margin-top: 22px;
   margin-bottom: 32px;
@@ -429,7 +421,7 @@ header {
 }
 /* BMI Content end */
 
-/* BMI__calculator--section */
+/* BMI__calculator--section start */
 .BMI__calculator--section {
   width: 100%;
   height: auto;
@@ -550,8 +542,9 @@ th {
   border-radius: 42px;
   font-size: 1.1rem;
 }
+/* BMI__calculator--section end */
 
-/* team section */
+/* team section start*/
 .team-section {
   width: 100%;
   height: auto;
@@ -627,7 +620,7 @@ th {
 }
 
 .passes__content {
-  max-width: 90%;
+  width: 90%;
   height: auto;
   margin: 0 auto;
   margin-bottom: 28px;
@@ -738,22 +731,11 @@ th {
 .arrow__icon {
   display: none;
 }
-
 /* passes section end */
 
+/* main container ends here */
 
-
-
-
-
-
-
-
-
-
-
-
-/* footer */
+/* footer container starts here */
 .footer {
   width: 100%;
   height: auto;
@@ -810,7 +792,7 @@ th {
 }
 
 .horizontal__row {
-  width: 95%;
+  width: 80%;
   height: 0;
   border: 2px solid rgba(255, 255, 255, 0.1);
   margin: 0 auto;
@@ -824,4 +806,6 @@ th {
   margin-top: 36px;
   margin-bottom: 57px;
   font-size: 1.1rem;
+  text-align: center;
 }
+/* footer container ends here */
